recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: value update is not a member of Double
getX()=n
^Tree:4: error: value update is not a member of Double
getY()=m
^