recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, lenght:Double, angle:Double, shrink:Double)    {
getX()=n
getY()=m
current(steps)
if(steps==0) {return()}
	else{
		avance(lenght)
		droite(angle)
		subtree(steps-1,lenght*shrink,angle,shrink)
		
		gauche(2*angle)
		subtree(steps-1,lenght*shrink,angle,shrink)
		droite(angle)
		recule(lenght)
	}
}	
		
		
		
		
		


